Implement second algorithm